--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@emailjs/react-native": "^5.1.0",
     "@expo-google-fonts/nunito": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
@@ -25,17 +26,20 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.1",
-    "expo": "53.0.19",
+    "@types/expo__vector-icons": "^10.0.2",
+    "expo": "53.0.20",
+    "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
-    "expo-router": "~5.1.3",
+    "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -48,6 +52,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.5",
+    "react-native-config": "^1.5.5",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -61,6 +66,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "twrnc": "^4.7.0",
@@ -72,7 +78,9 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.0.15",
     "@types/react": "~19.0.10",
+    "@types/react-native-uuid": "^2.0.0",
     "babel-jest": "^30.0.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^13.0.0",
