--- a/app.json
+++ b/app.json
@@ -8,9 +8,12 @@
     "scheme": "christennous",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
-    },
+   "ios": {
+  "supportsTablet": true,
+  "infoPlist": {
+    "NSFaceIDUsageDescription": "Cette application utilise Face ID pour une connexion rapide et sécurisée."
+  }
+},
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
@@ -25,20 +28,27 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ],
-      "expo-font",
-      "expo-localization"
-    ],
-    "experiments": {
+  "expo-router",
+  [
+    "expo-splash-screen",
+    {
+      "image": "./assets/images/splash-icon.png",
+      "imageWidth": 200,
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    }
+  ],
+  "expo-font",
+  "expo-localization",
+  "expo-secure-store",
+  [
+    "expo-local-authentication",
+    {
+      "faceIDPermission": "Allow Christ En Nous to use Face ID for secure authentication."
+    }
+  ]
+],
+  "experiments": {
       "typedRoutes": true
     },
     "extra": {
