--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
     "expo-router": "~5.1.4",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -54,6 +56,7 @@
     "react-native": "0.79.5",
     "react-native-config": "^1.5.5",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.3",
@@ -80,6 +83,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
     "@types/react": "~19.0.10",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-uuid": "^2.0.0",
     "babel-jest": "^30.0.2",
     "babel-plugin-module-resolver": "^5.0.2",
