--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.1",
-    "@types/expo__vector-icons": "^10.0.2",
     "expo": "53.0.20",
     "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
@@ -79,6 +78,7 @@
     "@babel/core": "^7.25.2",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
+    "@types/expo__vector-icons": "^10.0.2",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
@@ -90,6 +90,7 @@
     "babel-preset-expo": "^13.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-module-scripts": "^4.1.9",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
     "patch-package": "^8.0.0",
