--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.1",
+    "date-fns": "^4.1.0",
     "expo": "53.0.20",
     "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
