--- a/app.json
+++ b/app.json
@@ -1,19 +1,20 @@
 {
   "expo": {
-    "name": "christ-en-nous",
-    "slug": "christ-en-nous",
+    "name": " ",
+    "slug": "Christ En Nous",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/image1.png",
     "scheme": "christennous",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-   "ios": {
-  "supportsTablet": true,
-  "infoPlist": {
-    "NSFaceIDUsageDescription": "Cette application utilise Face ID pour une connexion rapide et sécurisée."
-  }
-},
+    "ios": {
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "Cette application utilise Face ID pour une connexion rapide et sécurisée.",
+        "CFBundleDisplayName": "Christ En Nous"
+      }
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
@@ -28,27 +29,30 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-  "expo-router",
-  [
-    "expo-splash-screen",
-    {
-      "image": "./assets/images/splash-icon.png",
-      "imageWidth": 200,
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    }
-  ],
-  "expo-font",
-  "expo-localization",
-  "expo-secure-store",
-  [
-    "expo-local-authentication",
-    {
-      "faceIDPermission": "Allow Christ En Nous to use Face ID for secure authentication."
-    }
-  ]
-],
-  "experiments": {
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/image1.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff",
+          "dark": {
+            "image": "./assets/images/image1.png",
+            "backgroundColor": "#0F172A"
+          }
+        }
+      ],
+      "expo-font",
+      "expo-localization",
+      "expo-secure-store",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow Christ En Nous to use Face ID for secure authentication."
+        }
+      ]
+    ],
+    "experiments": {
       "typedRoutes": true
     },
     "extra": {
