--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -36,6 +37,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-local-authentication": "~16.0.5",
@@ -50,6 +52,7 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^11.7.1",
     "google-libphonenumber": "^3.2.42",
+    "lodash.isequal": "^4.5.0",
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -83,6 +86,8 @@
     "@types/expo__vector-icons": "^10.0.2",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^30.0.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^24.0.15",
     "@types/react": "~19.0.10",
     "@types/react-native-dotenv": "^0.2.2",
@@ -95,6 +100,7 @@
     "expo-module-scripts": "^4.1.9",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
+    "lodash.debounce": "^4.0.8",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "^19.0.0",
