--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
@@ -43,6 +45,7 @@
     "expo-local-authentication": "~16.0.5",
     "expo-localization": "~16.1.6",
     "expo-location": "~18.1.6",
+    "expo-network": "^7.1.5",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.10",
