Mise en place de la fonctionnalité bible avec endpoint api et mis en place de la gestion de  responsivité des appareils

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": " ",
     "slug": "Christ En Nous",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/image1.png",
     "scheme": "christennous",
     "userInterfaceStyle": "automatic",
@@ -21,7 +21,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.christennous"
+      "package": "com.anonymous.christennous",
+      "supportsTablet": true
     },
     "web": {
       "bundler": "metro",
