--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-asset": "^12.0.9",
+    "expo-av": "~16.0.8",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.7",
